# amplifier-bundle-unknowns

./: .gitignore  AGENTS.md  README.md  bundle.dot  bundle.md  pyproject.toml
agents/: unknownfinder.md  unknowns-cartographer.md
behaviors/: unknowns.yaml
context/: ascii-render-spec.md  map-template.dot  unknowns-awareness.md  unknowns-matrix.md
modes/: interview.md
modules/tool-unknowns/: pyproject.toml
modules/tool-unknowns/amplifier_module_tool_unknowns/: __init__.py
modules/tool-unknowns/tests/: conftest.py  test_mount.py
pipelines/: unknowns-lifecycle.dot  unknowns-lifecycle.resolver.yaml
scripts/: dominant_quadrant.sh  make_example_map.py
skills/blindspot-pass/: SKILL.md
skills/unknownfinder/: SKILL.md
tests/: test_map_ops.py  test_render_pretty.py  test_triage_contract.py
unknowns_map/: __init__.py  _assets.py  cli.py  engine_runner.py  map_ops.py
